src/test/deca/codegen/valid/created/modulo.deca
// Description :
//    test du modulo seul pour codegen
//
// Resultats :
//    	Ok

{
int a = 3 % 4;
}
