src/test/deca/codegen/invalid/created/modulo_0.deca
// Description :
//		Programme pour tester le modulo par zero
//
// Resultats :
//		Erreur de compilation
//		modulo par zero

{
int a = 1%0;
}